--- a/Cryptorio/Cryptorio/Base.lproj/Main.storyboard
+++ b/Cryptorio/Cryptorio/Base.lproj/Main.storyboard
@@ -312,22 +312,56 @@
             </objects>
             <point key="canvasLocation" x="2757.5999999999999" y="-79.610194902548727"/>
         </scene>
-        <!--Worker List View Controller-->
+        <!--Workers-->
         <scene sceneID="wif-u8-ZHd">
             <objects>
-                <tableViewController id="YF5-VW-Tgq" customClass="FPWorkerListViewController" customModule="Cryptorio" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="YwX-oz-nqK">
+                <tableViewController title="Workers" id="YF5-VW-Tgq" customClass="FPWorkerListViewController" customModule="Cryptorio" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="72" sectionHeaderHeight="28" sectionFooterHeight="28" id="YwX-oz-nqK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FPWorkerTableViewCell" id="coC-Rt-qTU">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FPWorkerTableViewCell" id="coC-Rt-qTU" customClass="FPWorkerTableViewCell" customModule="Cryptorio" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="72"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="coC-Rt-qTU" id="eEq-9A-ZmR">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="71.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0 kH/s - 0.0 kH/s" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.30000001192092896" translatesAutoresizingMaskIntoConstraints="NO" id="Y8n-kf-3J1">
+                                            <rect key="frame" x="16" y="8" width="343" height="28"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="24"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Current Hashrate - Average Hashrate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zAD-9l-Oqt">
+                                            <rect key="frame" x="16" y="38" width="166" height="12"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="10"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="worker name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="e1s-hl-iGl">
+                                            <rect key="frame" x="16" y="51" width="343" height="14"/>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Y8n-kf-3J1" firstAttribute="top" secondItem="eEq-9A-ZmR" secondAttribute="topMargin" id="ARC-Wn-Nlq"/>
+                                        <constraint firstItem="e1s-hl-iGl" firstAttribute="leading" secondItem="zAD-9l-Oqt" secondAttribute="leading" id="H0o-Rk-hDj"/>
+                                        <constraint firstItem="zAD-9l-Oqt" firstAttribute="leading" secondItem="Y8n-kf-3J1" secondAttribute="leading" id="L1G-1K-t4G"/>
+                                        <constraint firstItem="Y8n-kf-3J1" firstAttribute="trailing" secondItem="eEq-9A-ZmR" secondAttribute="trailingMargin" constant="-8" id="ZD3-XC-4jV"/>
+                                        <constraint firstItem="e1s-hl-iGl" firstAttribute="top" secondItem="zAD-9l-Oqt" secondAttribute="bottom" constant="1" id="mpG-zR-GFy"/>
+                                        <constraint firstItem="zAD-9l-Oqt" firstAttribute="top" secondItem="Y8n-kf-3J1" secondAttribute="bottom" constant="2" id="oRd-na-9Wr"/>
+                                        <constraint firstAttribute="trailing" secondItem="e1s-hl-iGl" secondAttribute="trailing" constant="16" id="uDC-Ec-fta"/>
+                                        <constraint firstItem="Y8n-kf-3J1" firstAttribute="leading" secondItem="eEq-9A-ZmR" secondAttribute="leadingMargin" constant="8" id="zRW-45-B5k"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="hashRateLabel" destination="Y8n-kf-3J1" id="Ynk-YE-9Ph"/>
+                                    <outlet property="workerNameLabel" destination="e1s-hl-iGl" id="wbW-Ra-G0x"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -338,7 +372,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UdF-6h-sq9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3708" y="-417"/>
+            <point key="canvasLocation" x="3708" y="-417.8410794602699"/>
         </scene>
         <!--Table View Controller-->
         <scene sceneID="WaF-VF-r6d">
